# de-agent

./: .env.template  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
config/: platform.yaml
config/sources/: api_food_data.yaml  batch_census.yaml  stream_weather.yaml
config/transforms/: census_aggregation.yaml  food_enrichment.yaml
docs/: dashboard.html  walkthrough.html
infra/: docker-compose.yaml
infra/k8s/: deployment.yaml
infra/prometheus/: prometheus.yml
infra/terraform/: main.tf  variables.tf
spark_jobs/: transform_job.py
src/: __init__.py  cli.py  server.py
src/core/: __init__.py  autoscaler.py  context_layer.py  exceptions.py  orchestrator.py  topic_router.py
src/endpoints/: __init__.py  census_batch.py  food_api.py  weather_stream.py
src/governance/: __init__.py  classifier.py  lineage.py  quality.py
src/ingest/: __init__.py  api_source.py  base.py  batch_source.py  stream_source.py
src/observability/: __init__.py  logging_config.py  metrics.py  tracing.py
src/storage/: __init__.py  iceberg_writer.py
src/transform/: __init__.py  dsl_parser.py  models.py  python_engine.py  spark_engine.py
tests/: test_context_layer.py  test_dsl_parser.py  test_governance.py  test_python_engine.py  test_quality.py  test_topic_router.py
